--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,12 @@ ignore_missing_imports = True
 [mypy-sklearn.*]
 ignore_missing_imports = True
 
+[mypy-torch.*]
+ignore_missing_imports = True
+
+[mypy-yaml]
+ignore_missing_imports = True
+
 [mypy-cv2]
 ignore_missing_imports = True
 
