update setup.cfg for conflict

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,11 @@
 [flake8]
 max-line-length=88
+ignore = E203,W503,W504
+
+[tool.isort]
+include_trailing_comma = true
+line_length = 99
+multi_line_output = 3
 
 [mypy]
 
