--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 max-line-length=88
 ignore = E203,W503,W504
 
-[tool.isort]
+[isort]
 include_trailing_comma = true
-line_length = 99
+line_length = 88
 multi_line_output = 3
 
 [mypy]
