init classification and update setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,10 +12,10 @@ multi_line_output = 3
 [mypy-numpy]
 ignore_missing_imports = True
 
-[mypy-matplotlib]
+[mypy-matplotlib.*]
 ignore_missing_imports = True
 
-[mypy-matplotlib.pyplot]
+[mypy-timm]
 ignore_missing_imports = True
 
 [mypy-pytorch_widedeep.metrics]
