--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,12 @@ ignore_missing_imports = True
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
+[mypy-torchvision.*]
+ignore_missing_imports = True
+
+[mypy-PIL]
+ignore_missing_imports = True
+
 [mypy-timm]
 ignore_missing_imports = True
 
